# bazel-java-startup-bug

./: .bazelrc  .gitignore  BUILD.bazel  Bar.java  Foo.java  Main.java  WORKSPACE  runfiles_tree.bzl
